# BOFE-Rust

./: .gitignore  Cargo.toml  readme.md
src/: articles.rs  cli.yml  lib.rs  mailer.rs  main.rs
src/boletin/: mod.rs  query.rs
src/boletin/mocks/: empty-response.json  multi-page-multi-result-response.json  single-page-multi-result-response.json  single-result-response.json
