[package]
name = "bofe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
soup = "0.5.1"
serde = { version = "1.0.127" , features = ["derive"]}
chrono = "0.4"
serde_json = "1.0"
lettre = "0.10.0-rc.3"
dotenv = "0.15.0"
